# cafe_robot_ws

./: .gitignore  README.md
src/cafe_robot/: CMakeLists.txt  package.xml
src/cafe_robot/behavior_trees/: navigate_to_pose.xml
src/cafe_robot/cafe_robot/: alert_node.py  navigation_node.py  state_manager_node.py  table_mapping_node.py  tracking_node.py  yolo_node.py
src/cafe_robot/config/: cafe_robot_config.yaml  nav2_params.yaml
src/cafe_robot/launch/: cafe_robot_launch.py  cafe_world_launch.py  nav2_launch.py
src/cafe_robot/maps/: cafe_map.pgm  cafe_map.yaml
src/cafe_robot/models/: turtlebot3_burger_camera.sdf
src/cafe_robot/urdf/: turtlebot3_burger_camera.urdf
src/cafe_robot/worlds/: cafe_world.world
